octave2.9 (1:2.9.13-2) UNRELEASED; urgency=low

  * debian/in/PACKAGE.menu: Adapted to the new menu hierarchy, which will
    be in the next release of Policy

 -- Rafael Laboissiere <rafael@debian.org>  Wed,  1 Aug 2007 19:04:43 +0200

octave2.9 (1:2.9.13-1) unstable; urgency=low

  * New upstream release
  * debian/patches/01_use_suitesparse_for_ufsparse.dpatch,
    debian/patches/50_fix_pkg_rebuild.m.dpatch : Removed patches
    (applied upstream)

  * debian/octave.st: Added enscript highlighting rules for Octave
  * debian/in/PACKAGE.dirs: Added directory for enscript
  * debian/rules: Install octave.st

  * debian/in/control:
    + Removed the obsolete build-dependency on dejagnu (over two years
      ago, DejaGNU was replaced by the test/assert infrastructure for
      running the tests)
    + Use the substitution variable ${binary:Version} instead of the
      deprecated ${Source-Version}, which also makes the package
      binNMUable
  * debian/rules: Do not ignore make clean/distclean error

 -- Rafael Laboissiere <rafael@debian.org>  Mon, 23 Jul 2007 23:06:54 +0200

octave2.9 (1:2.9.12-2) unstable; urgency=low

  * debian/in/control, debian/rules:
    + Switch back to g77 from gfortran (closes: #427257).
      This has been discussed with the toolchain guys and is the easist
      solution for now, see
      http://lists.debian.org/debian-gcc/2007/06/msg00024.html
    + Switch to SuiteSparse from UFSparse.
  * New patch:
    01_use_suitesparse_for_ufsparse.dpatch
    SuiteSparse introduced a new type in 3.0, see
    http://www.cae.wisc.edu/pipermail/help-octave/2007-June/004188.html

 -- Thomas Weber <thomas.weber.mail@gmail.com>  Wed, 06 Jun 2007 07:48:32 +0000

octave2.9 (1:2.9.12-1) unstable; urgency=low

  [ Thomas Weber ]
  * New upstream release
    (2.9.11 had a problem when building, so we didn't package it)
  * data-conv.cc now #include's cstdlib (closes: #417487)
  * This release fixes the problem with handing empty matrices to fft.m